--- a/app/wrong_os.html
+++ b/app/wrong_os.html
@@ -11,7 +11,7 @@
     <script>
         delete module.exports
     </script>
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script src="wrong_os.js" charset="utf-8"></script>
 </head>
 <body>
