Improved shortcut descriptions

--- a/app/folder_select.html
+++ b/app/folder_select.html
@@ -44,8 +44,8 @@
     <button id="continue-button" type="button" style="margin: 20px auto;display: block"
             class="btn btn-primary">Continue
     </button>
-    <div id="github-link" class="github-link" title="Visit GitHub Repo"><i class="fab fa-github"></i></div>
-    <div id="website-link" class="website-link" title="Visit website">Realitymod.com</div>
+    <div id="github-link" class="github-link" title="Visit the GitHub repository of PR:BF2 Download Assistant"><i class="fab fa-github"></i></div>
+    <div id="website-link" class="website-link" title="Visit the website of PR:BF2">realitymod.com</div>
 </div>
 </body>
 </html>
