--- a/app/download.html
+++ b/app/download.html
@@ -45,9 +45,8 @@
             </div>
         </div>
     </div>
-    <div id="github-link" class="github-link" title="Visit GitHub Repo"><i class="fab fa-github"></i>
-    </div>
-    <div id="website-link" class="website-link" title="Visit website">Realitymod.com</div>
+    <div id="github-link" class="github-link" title="Visit the GitHub repository of PR:BF2 Download Assistant"><i class="fab fa-github"></i></div>
+    <div id="website-link" class="website-link" title="Visit the website of PR:BF2">realitymod.com</div>
     <div class="row">
         <div id="install-container" class="col-sm">
             <button id="install-button" type="button"
