--- a/app/remove.html
+++ b/app/remove.html
@@ -37,8 +37,8 @@
             </button>
         </div>
     </div>
-    <div id="github-link" class="github-link" title="Visit GitHub Repo"><i class="fab fa-github"></i></div>
-    <div id="website-link" class="website-link" title="Visit website">Realitymod.com</div>
+    <div id="github-link" class="github-link" title="Visit the GitHub repository of PR:BF2 Download Assistant"><i class="fab fa-github"></i></div>
+    <div id="website-link" class="website-link" title="Visit the website of PR:BF2">realitymod.com</div>
 </div>
 </body>
 </html>
